Tue Nov 11 23:39:30 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkboard.c, gtkboard.h: fix two minor bugs causing crashes
	on closing

Tue Nov 11 11:59:52 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, eval.c, eval.h, play.c: Evaluate accept resign at
	2ply. Const a few evalcontext's.

Mon Nov 10 23:39:32 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: fix a bug in LegalDestPoints when skipping pips during
	bearoff

Mon Nov 10 00:18:25 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: add notidy flag to the bearoff database creation window

Mon Nov 10 00:10:06 CET 2008 Christian Anthon <anthon@kiku.dk>

	* makebearoff.c: delete special win32 code

Sat Nov  1 14:31:07 CET 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c, dbprovider.h, gnubg.c: fix minor compile problems with
	and without python

Fri Oct 24 17:07:03 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c, dbprovider.h, gnubg.c, gnubgmodule.c, gnubgmodule.h,
	gtkrelational.c, relational.c, relational.h: improve on the
	inter-dependencies a bit by moving pure database functions to
	dbprovider.c

Wed Oct 22 22:20:42 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* play.c: delete some debug code that doesn't work anymore

Wed Oct 22 22:17:53 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: set the page-size to zero in gtkadjustment for
	gtkspinbutton to silence a gtk warning in 2.14.3

Wed Oct 22 21:42:38 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, html.c, import.c, makebearoff.c, makehyper.c,
	makeweights.c, record.c: check the return value of fread, fwrite, and
	fscanf

Wed Oct 22 21:21:45 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* export.c: check the return value of fwrite to silence a compiler
	warning.

Wed Oct 22 21:10:02 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: check the return value of fgets to silence a compiler
	warning.

Wed Oct 22 20:50:55 CEST 2008 Christian Anthon <anthon@kiku.dk>
