@@ -3,3 +3,4 @@ void gnubg_stock_init(void);
 #define GNUBG_STOCK_REJECT "gnubg-stock-reject"
 #define GNUBG_STOCK_DOUBLE "gnubg-stock-double"
 #define GNUBG_STOCK_HINT "gnubg-stock-hint"
+#define GNUBG_STOCK_RESIGN "gnubg-stock-resign"
