@@ -131,9 +131,6 @@ typedef enum _gnubgcommand {
     CMD_RECORD_SHOW,
     CMD_REJECT,
     CMD_RELATIONAL_ADD_MATCH,
-    CMD_RESIGN_N,
-    CMD_RESIGN_G,
-    CMD_RESIGN_B,
     CMD_ROLL,
     CMD_ROLLOUT,
     CMD_ROLLOUT_CUBE,
@@ -194,9 +191,6 @@ static const char *aszCommands[ NUM_CMDS ] = {
     "record show",
     "reject",
     "relational add match",
-    "resign normal",
-    "resign gammon",
-    "resign backgammon",
     "roll",
     "rollout",
     "rollout =cube",
@@ -3368,7 +3362,7 @@ GtkItemFactoryEntry aife[] = {
 	{ N_("/_Game/_Finish move"), "<control>F", FinishMove, 0, NULL, NULL },
 	{ N_("/_Game/-"), NULL, NULL, 0, "<Separator>", NULL },
 	{ N_("/_Game/_Double"), "<control>D", Command, CMD_DOUBLE, "<StockItem>", GNUBG_STOCK_DOUBLE },
-	{ N_("/_Game/Re_sign"), NULL, GTKResign, 0, NULL, NULL },
+	{ N_("/_Game/Re_sign"), NULL, GTKResign, 0, "<StockItem>", GNUBG_STOCK_RESIGN },
 	{ N_("/_Game/-"), NULL, NULL, 0, "<Separator>", NULL },
 	{ N_("/_Game/_Accept"), NULL, Command, CMD_ACCEPT, "<StockItem>", GNUBG_STOCK_ACCEPT },
 	{ N_("/_Game/Re_ject"), NULL, Command, CMD_REJECT, "<StockItem>", GNUBG_STOCK_REJECT },
