@@ -209,6 +209,78 @@ static const guint8 hint_16[] =
 /* GdkPixbuf RGBA C-Source image dump */
 
 #ifdef __SUNPRO_C
+#pragma align 4 (resign_16)
+#endif
+#ifdef __GNUC__
+static const guint8 resign_16[] __attribute__ ((__aligned__ (4))) = 
+#else
+static const guint8 resign_16[] = 
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (1024) */
+  "\0\0\4\30"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (64) */
+  "\0\0\0@"
+  /* width (16) */
+  "\0\0\0\20"
+  /* height (16) */
+  "\0\0\0\20"
+  /* pixel_data: */
+  "\21\21\21""7\24\26\24\377\0\0\0""7\0\0\0\33\0\0\0\40\0\0\0\40\0\0\0$"
+  "\0\0\0\5\0\0\0\0\0\0\0\0\0\0\0\10\0\0\0\5&&&\10\0\0\0\0\0\0\0\0\0\0\0"
+  "\5\24\25\23\377\227\256\217\372\13\16\13\377QPQ\377lll\377iii\377QQQ"
+  "\377\"\"\"\312\0\0\0|\0\0\0""4\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0""4\0\0\0"
+  "\202***\312\15\20\15\376h\201_\377\35\37\34\376\345\344\345\377\377\377"
+  "\377\376\367\367\367\377\346\346\346\374\273\273\273\377\207\207\207"
+  "\377fff\377\34\34\34\337\31\31\31\344NNN\340\224\224\224\377\312\312"
+  "\312\377uuu\377\16\21\16\377m\205d\377\34\36\33\377\324\323\324\377\347"
+  "\347\347\377\337\337\337\377\325\325\325\377\314\314\314\377\321\321"
+  "\321\376\333\333\333\377\346\346\346\377\355\355\355\377\360\360\360"
+  "\377\364\364\364\377\377\377\377\376yyy\377\16\21\16\376m\205d\377\34"
+  "\36\33\376\324\324\325\377\350\350\350\376\340\340\340\377\326\326\326"
+  "\376\311\311\311\377\311\311\311\376\321\321\321\377\330\330\330\376"
+  "\337\337\337\377\345\345\345\376\354\354\354\377\377\377\377\376yyy\377"
+  "\16\21\16\377m\205d\377\34\36\33\377\325\324\325\377\351\351\351\377"
+  "\342\342\342\377\327\327\327\377\311\311\311\377\311\311\311\377\321"
+  "\321\321\377\330\330\330\377\337\337\337\377\345\345\345\377\354\354"
+  "\354\377\377\377\377\377yyy\377\16\21\16\376m\205d\377\34\36\33\376\326"
+  "\326\326\377\353\353\353\376\342\342\342\377\327\327\327\376\311\311"
+  "\311\377\311\311\311\376\321\321\321\377\330\330\330\376\337\337\337"
+  "\377\345\345\345\376\354\354\354\377\377\377\377\376zzz\377\16\21\16"
+  "\377m\205d\377\34\36\33\377\330\327\330\377\353\353\353\377\344\344\344"
+  "\377\334\334\334\377\311\311\311\377\311\311\311\377\321\321\321\377"
+  "\330\330\330\377\337\337\337\377\345\345\345\377\354\354\354\377\377"
+  "\377\377\377zzz\377\16\21\16\376m\205d\377\34\36\33\376\330\330\331\377"
+  "\354\354\354\376\346\346\346\377\341\341\341\376\310\310\310\377\312"
+  "\312\312\376\321\321\321\377\330\330\330\376\337\337\337\377\345\345"
+  "\345\376\354\354\354\377\377\377\377\376zzz\377\16\21\16\377m\205d\377"
+  "\34\36\33\377\335\334\335\377\363\363\363\377\352\352\352\377\342\342"
+  "\342\377\315\315\315\377\311\311\311\377\320\320\320\377\330\330\330"
+  "\377\336\336\336\377\345\345\345\377\353\353\353\377\377\377\377\377"
+  "zzz\377\16\21\16\376m\206e\376\36\40\35\377\274\274\274\377\276\276\276"
+  "\377\272\272\272\377\301\301\301\377\315\315\315\377\335\335\335\365"
+  "\333\333\333\374\325\325\325\377\332\332\332\377\341\341\341\377\355"
+  "\355\355\374\377\377\377\366rrr\377\16\21\16\377o\207f\377\22\25\22\356"
+  ",+,t\0\0\0\177\0\0\0\177222s```\312ttt\377\304\304\304\377\360\360\360"
+  "\377\372\372\372\377\366\366\366\377\344\344\344\377kkk\377&&&\312\16"
+  "\21\16\376o\207g\377\3\5\2\333\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\20\14\14\14|\27\27\27\363\34\34\34\336\27\27\27\356###|\0\0"
+  "\0\12\0\0\0\0\16\21\16\377o\207g\377\5\10\5\336\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\37\37\37\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\16\21\16\376o\207f\377\5\10\5\336\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\16\20\15\377o\207g\377\5\10\5\336\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0"};
+
+
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
 #pragma align 4 (double_16)
 #endif
 #ifdef __GNUC__
@@ -602,6 +674,134 @@ static const guint8 hint_24[] =
   "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
   "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
   "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"};
+
+
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
+#pragma align 4 (resign_24)
+#endif
+#ifdef __GNUC__
+static const guint8 resign_24[] __attribute__ ((__aligned__ (4))) = 
+#else
+static const guint8 resign_24[] = 
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (2304) */
+  "\0\0\11\30"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (96) */
+  "\0\0\0`"
+  /* width (24) */
+  "\0\0\0\30"
+  /* height (24) */
+  "\0\0\0\30"
+  /* pixel_data: */
+  "\0\0\0\0\0\0\0\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\377"
+  "\250\265\245\377fx`\377\0\0\0\377\0\0\0\377\0\0\0\377\0\0\0\377\0\0\0"
+  "\377\0\0\0\377\0\0\0\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\234\234\234\377\305\305\305"
+  "\377\351\351\351\377\353\353\353\377\324\324\324\377\304\304\304\377"
+  "qqq\377///\377\0\0\0\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\377\0\0\0\377\200\200\200\377\0\0\0\377\0\0\0\377"
+  "p\205i\377QfJ\377\0\0\0\377\276\276\276\377\321\321\321\377\347\347\347"
+  "\377\341\341\341\377\333\333\333\377\324\324\324\377\316\316\316\377"
+  "\301\301\301\377\237\237\237\377\221\221\221\377111\377\0\0\0\377\0\0"
+  "\0\377\0\0\0\377555\377yyy\377\267\267\267\377\342\342\342\377\356\356"
+  "\356\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\275\275\275\377"
+  "\321\321\321\377\350\350\350\377\342\342\342\377\333\333\333\377\325"
+  "\325\325\377\317\317\317\377\307\307\307\377\313\313\313\377\317\317"
+  "\317\377\324\324\324\377\330\330\330\377\335\335\335\377\341\341\341"
+  "\377\345\345\345\377\352\352\352\377\356\356\356\377\363\363\363\377"
+  "\360\360\360\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\275\275"
+  "\275\377\321\321\321\377\351\351\351\377\342\342\342\377\334\334\334"
+  "\377\326\326\326\377\317\317\317\377\307\307\307\377\313\313\313\377"
+  "\317\317\317\377\324\324\324\377\330\330\330\377\335\335\335\377\341"
+  "\341\341\377\345\345\345\377\352\352\352\377\356\356\356\377\363\363"
+  "\363\377\362\362\362\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377"
+  "\276\276\276\377\322\322\322\377\351\351\351\377\343\343\343\377\335"
+  "\335\335\377\327\327\327\377\317\317\317\377\307\307\307\377\313\313"
+  "\313\377\317\317\317\377\324\324\324\377\330\330\330\377\335\335\335"
+  "\377\341\341\341\377\345\345\345\377\352\352\352\377\356\356\356\377"
+  "\363\363\363\377\363\363\363\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377"
+  "\0\0\0\377\276\276\276\377\322\322\322\377\352\352\352\377\344\344\344"
+  "\377\336\336\336\377\327\327\327\377\317\317\317\377\307\307\307\377"
+  "\313\313\313\377\317\317\317\377\324\324\324\377\330\330\330\377\335"
+  "\335\335\377\341\341\341\377\345\345\345\377\352\352\352\377\356\356"
+  "\356\377\363\363\363\377\363\363\363\377\0\0\0\377\0\0\0\377p\205i\377"
+  "QfJ\377\0\0\0\377\276\276\276\377\323\323\323\377\353\353\353\377\345"
+  "\345\345\377\336\336\336\377\330\330\330\377\317\317\317\377\307\307"
+  "\307\377\313\313\313\377\317\317\317\377\324\324\324\377\330\330\330"
+  "\377\335\335\335\377\341\341\341\377\345\345\345\377\352\352\352\377"
+  "\356\356\356\377\363\363\363\377\364\364\364\377\0\0\0\377\0\0\0\377"
+  "p\205i\377QfJ\377\0\0\0\377\277\277\277\377\324\324\324\377\354\354\354"
+  "\377\345\345\345\377\337\337\337\377\331\331\331\377\317\317\317\377"
+  "\307\307\307\377\313\313\313\377\317\317\317\377\324\324\324\377\330"
+  "\330\330\377\335\335\335\377\341\341\341\377\345\345\345\377\352\352"
+  "\352\377\356\356\356\377\363\363\363\377\364\364\364\377\0\0\0\377\0"
+  "\0\0\377p\205i\377QfJ\377\0\0\0\377\300\300\300\377\325\325\325\377\354"
+  "\354\354\377\346\346\346\377\340\340\340\377\331\331\331\377\317\317"
+  "\317\377\307\307\307\377\313\313\313\377\317\317\317\377\324\324\324"
+  "\377\330\330\330\377\335\335\335\377\341\341\341\377\345\345\345\377"
+  "\352\352\352\377\356\356\356\377\363\363\363\377\364\364\364\377\0\0"
+  "\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\301\301\301\377\325\325\325"
+  "\377\355\355\355\377\346\346\346\377\342\342\342\377\342\342\342\377"
+  "\317\317\317\377\307\307\307\377\313\313\313\377\317\317\317\377\324"
+  "\324\324\377\330\330\330\377\335\335\335\377\341\341\341\377\345\345"
+  "\345\377\352\352\352\377\356\356\356\377\363\363\363\377\365\365\365"
+  "\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\301\301\301\377\326"
+  "\326\326\377\356\356\356\377\346\346\346\377\346\346\346\377\342\342"
+  "\342\377\317\317\317\377\307\307\307\377\313\313\313\377\317\317\317"
+  "\377\324\324\324\377\330\330\330\377\335\335\335\377\341\341\341\377"
+  "\345\345\345\377\352\352\352\377\356\356\356\377\363\363\363\377\364"
+  "\364\364\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\301\301\301"
+  "\377\327\327\327\377\356\356\356\377\346\346\346\377\342\342\342\377"
+  "\342\342\342\377\317\317\317\377\307\307\307\377\313\313\313\377\317"
+  "\317\317\377\324\324\324\377\330\330\330\377\335\335\335\377\341\341"
+  "\341\377\345\345\345\377\352\352\352\377\356\356\356\377\363\363\363"
+  "\377\363\363\363\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\302"
+  "\302\302\377\327\327\327\377\357\357\357\377\351\351\351\377\342\342"
+  "\342\377\335\335\335\377\332\332\332\377\307\307\307\377\313\313\313"
+  "\377\317\317\317\377\324\324\324\377\330\330\330\377\335\335\335\377"
+  "\341\341\341\377\345\345\345\377\352\352\352\377\356\356\356\377\363"
+  "\363\363\377\362\362\362\377\0\0\0\377\0\0\0\377p\205i\377QfJ\377\0\0"
+  "\0\377\302\302\302\377\330\330\330\377\360\360\360\377\351\351\351\377"
+  "\343\343\343\377\337\337\337\377\334\334\334\377\307\307\307\377\313"
+  "\313\313\377\317\317\317\377\324\324\324\377\330\330\330\377\335\335"
+  "\335\377\341\341\341\377\345\345\345\377\352\352\352\377\356\356\356"
+  "\377\363\363\363\377\352\352\352\377\0\0\0\377\0\0\0\377p\205i\377Qf"
+  "J\377\0\0\0\377xxx\377\0\0\0\377\0\0\0\377\0\0\0\377\22\22\22\377OOO"
+  "\377ttt\377\256\256\256\377\314\314\314\377\352\352\352\377\347\347\347"
+  "\377\344\344\344\377\350\350\350\377\352\352\352\377\354\354\354\377"
+  "\361\361\361\377\354\354\354\377\345\345\345\377\237\237\237\377\0\0"
+  "\0\377\0\0\0\377p\205i\377QfJ\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\"\"\"\377***\377jjj\377\271\271\271\377"
+  "\324\324\324\377\350\350\350\377\351\351\351\377\343\343\343\377\321"
+  "\321\321\377\254\254\254\377\0\0\0\377\0\0\0\377\0\0\0\0\0\0\0\377p\205"
+  "i\377QfJ\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\377\0\0\0\377\0\0\0\377\0\0"
+  "\0\377\0\0\0\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\377"
+  "p\205i\377QfJ\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\377p\205i\377"
+  "QfJ\377\0\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\377p\205i\377QfJ\377\0"
+  "\0\0\377\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\377p\205i\377QfJ\377\0\0\0\377"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\377p\205i\377QfJ\377\0\0\0\377\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0"};
 
 
 /* GdkPixbuf RGBA C-Source image dump */
