@@ -1,103 +1,0 @@
-/* XPM */
-static char * resign_xpm[] = {
-"24 24 76 1",
-" 	c None",
-".	c #000000",
-"+	c #A8B5A5",
-"@	c #667860",
-"#	c #708569",
-"$	c #51664A",
-"%	c #9C9C9C",
-"&	c #C5C5C5",
-"*	c #E9E9E9",
-"=	c #EBEBEB",
-"-	c #D4D4D4",
-";	c #C4C4C4",
-">	c #717171",
-",	c #2F2F2F",
-"'	c #808080",
-")	c #BEBEBE",
-"!	c #D1D1D1",
-"~	c #E7E7E7",
-"{	c #E1E1E1",
-"]	c #DBDBDB",
-"^	c #CECECE",
-"/	c #C1C1C1",
-"(	c #9F9F9F",
-"_	c #919191",
-":	c #313131",
-"<	c #353535",
-"[	c #797979",
-"}	c #B7B7B7",
-"|	c #E2E2E2",
-"1	c #EEEEEE",
-"2	c #BDBDBD",
-"3	c #E8E8E8",
-"4	c #D5D5D5",
-"5	c #CFCFCF",
-"6	c #C7C7C7",
-"7	c #CBCBCB",
-"8	c #D8D8D8",
-"9	c #DDDDDD",
-"0	c #E5E5E5",
-"a	c #EAEAEA",
-"b	c #F3F3F3",
-"c	c #F0F0F0",
-"d	c #DCDCDC",
-"e	c #D6D6D6",
-"f	c #F2F2F2",
-"g	c #D2D2D2",
-"h	c #E3E3E3",
-"i	c #D7D7D7",
-"j	c #E4E4E4",
-"k	c #DEDEDE",
-"l	c #D3D3D3",
-"m	c #F4F4F4",
-"n	c #BFBFBF",
-"o	c #ECECEC",
-"p	c #DFDFDF",
-"q	c #D9D9D9",
-"r	c #C0C0C0",
-"s	c #E6E6E6",
-"t	c #E0E0E0",
-"u	c #EDEDED",
-"v	c #F5F5F5",
-"w	c #C2C2C2",
-"x	c #EFEFEF",
-"y	c #DADADA",
-"z	c #787878",
-"A	c #121212",
-"B	c #4F4F4F",
-"C	c #747474",
-"D	c #AEAEAE",
-"E	c #CCCCCC",
-"F	c #F1F1F1",
-"G	c #222222",
-"H	c #2A2A2A",
-"I	c #6A6A6A",
-"J	c #B9B9B9",
-"K	c #ACACAC",
-" ..                     ",
-".+@........            .",
-".#$.%&*=-;>,..      ..'.",
-".#$.)!~{]-^/(_:...<[}|1.",
-".#$.2!3|]45675-89{0a1bc.",
-".#$.2!*|de5675-89{0a1bf.",
-".#$.)g*h9i5675-89{0a1bb.",
-".#$.)gajki5675-89{0a1bb.",
-".#$.)l=0k85675-89{0a1bm.",
-".#$.n-o0pq5675-89{0a1bm.",
-".#$.r4ostq5675-89{0a1bm.",
-".#$./4us||5675-89{0a1bv.",
-".#$./e1ss|5675-89{0a1bm.",
-".#$./i1s||5675-89{0a1bb.",
-".#$.wix*|9y675-89{0a1bf.",
-".#$.w8c*hpd675-89{0a1ba.",
-".#$.z...ABCDEa~j3aoFo0(.",
-".#$.       GHIJ-3*h!K.. ",
-".#$.          ......    ",
-".#$.                    ",
-".#$.                    ",
-".#$.                    ",
-".#$.                    ",
-".#$.                    "};
