@@ -1,3 +1,12 @@
+Sat Nov 15 23:32:42 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gnubgstock.c, gnubgstock.h, gtkgame.c, gtktoolbar.c,
+	pixmaps/Makefile.am, pixmaps/gnubg-stock-pixbufs.h,
+	pixmaps/16x16/actions/resign_16.png,
+	pixmaps/24x24/actions/hint_16.png,
+	pixmaps/24x24/actions/resign_24.png, xpm/resign.xpm: Make a stock item
+	of the resign xpm
+
 Tue Nov 11 23:39:30 CET 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gnubg.c, gtkboard.c, gtkboard.h: fix two minor bugs causing crashes
